# i2Conf_modification

./: .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  bootstrap  build.xml  config.h  config.h.in  config.status  configure  configure.ac  i2conf.example.xml
.deps/: XMLConfig.Po  app.Po  call.Po  codec.Po  main.Po  media.Po  participant.Po  room.Po  sdpDesc.Po  timeoutController.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: example.xml  logger.properties
src/: app.cxx  app.h  main.cxx  timeoutController.cxx  timeoutController.h
src/config/: XMLConfig.cxx  XMLConfig.h
src/rooms/: participant.cxx  participant.h  room.cxx  room.h
src/sdp/: codec.cxx  codec.h  media.cxx  media.h  sdpDesc.cxx  sdpDesc.h
src/sip/: call.cxx  call.h  callClient.cxx  callClient.h  callIn.cxx  callIn.h  callOut.cxx  callOut.h
