bin_PROGRAMS = i2conf

i2conf_SOURCES = src/app.cxx \
		 src/app.h \
		 src/main.cxx \
		 src/timeoutController.cxx \
		 src/timeoutController.h \
		 src/config/XMLConfig.cxx \
		 src/config/XMLConfig.h \
		 src/rooms/participant.cxx \
		 src/rooms/participant.h  \
		 src/rooms/room.cxx \
		 src/rooms/room.h \
		 src/sdp/codec.cxx \
		 src/sdp/codec.h \
		 src/sdp/media.cxx \
		 src/sdp/media.h \
		 src/sdp/sdpDesc.cxx \
		 src/sdp/sdpDesc.h \
		 src/sip/call.cxx \
		 src/sip/call.h

EXTRA_DIST = conf log
